log
Wed 27 Mar 2024 06:29:08 PM UTC: 
 tests:  0|6
total_score: 0/70
36cd5d0
Wed 27 Mar 2024 06:33:49 PM UTC: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  0|6
total_score: 0/70
c8b4dd6
Wed 27 Mar 2024 06:34:08 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
39ad0cf
Wed 27 Mar 2024 06:36:40 PM UTC: 
 list.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c:47:5: error: expected identifier or ‘(’ before ‘return’
   47 |     return NULL;
      |     ^~~~~~
list.c:48:1: error: expected identifier or ‘(’ before ‘}’ token
   48 | }
      | ^
list.c: In function ‘firstList’:
list.c:44:1: error: control reaches end of non-void function [-Werror=return-type]
   44 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
98250a8
